--- a/themes/lescollections/conf/detail.conf
+++ b/themes/lescollections/conf/detail.conf
@@ -13,7 +13,7 @@ share_ca_objects_description_attribute = none
 #
 detailTypes = {
 	objects = {
-		displayName = _(Objets),
+		displayName = _(Objects),
 		table = ca_objects,
 		restrictToTypes = [],
 		options = {
@@ -31,7 +31,7 @@ detailTypes = {
 		#aliases = []
 	},
 	entities = {
-		displayName = _(Entités),
+		displayName = _(People),
 		table = ca_entities,
 		restrictToTypes = [],
 		options = {
@@ -45,7 +45,7 @@ detailTypes = {
 		}
 	},
 	occurrences = {
-		displayName = _(Occurrences),
+		displayName = _(Works),
 		table = ca_occurrences,
 		restrictToTypes = [],
 		options = {
