--- a/app/conf/app.conf
+++ b/app/conf/app.conf
@@ -100,7 +100,7 @@ privileged_networks = [192.168.6.*]
 #
 # Define locales/languages here that you want the Pawtucket UI to support
 # Each locale *MUST* have a messages.po/mo translation file in app/locales
-ui_locales = [en_US]
+ui_locales = [fr_FR]
 
 # -------------------
 # Mapping plugins
