--- a/app/conf/global.conf
+++ b/app/conf/global.conf
@@ -45,7 +45,7 @@ app_display_name = __CA_APP_DISPLAY_NAME__
 window_title = <app_display_name>
 
 # Default locale codes ** THESE MUST EXIST IN THE ca_locales TABLE **
-locale_defaults = [en_US]
+locale_defaults = [fr_FR]
 
 # set to non-zero value if you want large media to be queued for background processing
 # if you set it to zero then no queuing will occur, no matter what the threshold is in
