--- a/app/plugins/lesCollectionsEasyCustom/conf/lesCollectionsEasyCustom.conf
+++ b/app/plugins/lesCollectionsEasyCustom/conf/lesCollectionsEasyCustom.conf
@@ -1,4 +1,4 @@
 enabled=1
 
 # This file must exist for the plugin to instantiate
-lesCollectionsJsonFile = c:\www\htdocs\pawtucket_cs\frontInfos.json
+lesCollectionsJsonFile = frontInfos.json
