Timeline attribute changed
date.dates_value

--- a/themes/lescollections/conf/browse.conf
+++ b/themes/lescollections/conf/browse.conf
@@ -18,7 +18,7 @@ browseTypes = {
 			images = {},
 			list = {},
 			timeline = {
-				data = ca_objects.creation_date,
+				data = ca_objects.date.dates_value,
 				display = {
 					title_template = <l>^ca_objects.preferred_labels.name</l> (^ca_objects.idno),
 					description_template = <p>^ca_objects.description</p>,
