--- a/themes/lescollections/conf/browse.conf
+++ b/themes/lescollections/conf/browse.conf
@@ -27,7 +27,15 @@ browseTypes = {
 					image = ^ca_object_representations.media.small,
 					icon = ^ca_object_representations.media.icon
 				}
-			}
+			},
+			map = {
+			    data = ca_objects.georeference,
+			    display = {
+			        title_template = <l>^ca_objects.preferred_labels.name</l> (^ca_objects.idno),
+                	description_template = <p>^ca_objects.description</p>,
+                	color = #555555
+                }
+            }
 		},
 		sortBy = {
 			Identifier = ca_objects.idno,
